Fixed bug with logo on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -614,7 +614,7 @@ ul.sub-menu {
 }
 
 #home-slider .slider-name {
-    width: 400px;
+    width: 25vw;
     float: right;
     margin-right: -22px;
     margin-top: -15px;
